// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConversionMCard Test Test Snapshot Test Snapshot 1`] = `
<Styled(Card)
  margin="20px 0 20px 0"
  title={
    <styled.div>
      CONVERSION
    </styled.div>
  }
  width="100%"
>
  <styled.div
    horizontal={true}
    padding="0 10px"
  >
    <styled.div
      noMargin={true}
    >
      <div
        className="status-list-wrapper"
      >
        <ConversionEntry
          eth={1}
          key="1539843443"
          locale="EN"
          pending={true}
          reverted={true}
          timestamp={1539843443}
          tokenA={1}
          type="DUO"
        />
      </div>
    </styled.div>
  </styled.div>
</Styled(Card)>
`;

exports[`ConversionMCard Test Test Snapshot Test Snapshot 2`] = `
<Styled(Card)
  margin="20px 0 20px 0"
  title={
    <styled.div>
      CONVERSION
    </styled.div>
  }
  width="100%"
>
  <styled.div
    horizontal={true}
    padding="0 10px"
  >
    <styled.div
      noMargin={true}
    >
      <div
        className="status-list-wrapper"
      >
        <ul>
          <li
            className="block-title t-center"
          >
            No data
          </li>
        </ul>
      </div>
    </styled.div>
  </styled.div>
</Styled(Card)>
`;
